fixes offcenter issue with player controls

--- a/css/music.less
+++ b/css/music.less
@@ -320,7 +320,10 @@ input[type="text"]{
         position : relative;
         z-index : 50;
 
-        img { margin-top : 10px; }
+        img { 
+          margin-top : 12px; 
+          margin-right : 4px; 
+        }
       }
       #next { 
         .controls(50px, 50px, 25px, #666); 
@@ -331,7 +334,10 @@ input[type="text"]{
         position : relative;
         z-index : 50;
 
-        img { margin-top : 10px; }
+        img { 
+          margin-top : 12px; 
+          margin-left : 4px; 
+        }
       }
       audio { display : none; }
     }
